[package]
name = "http_req"
version = "0.8.1"
license = "MIT"
description = "simple and lightweight HTTP client with built-in HTTPS support"
repository = "https://github.com/jayjamesjay/http_req"
authors = ["jayjamesjay"]
readme = "README.md"
categories = ["web-programming::http-client", "network-programming"]
keywords = ["http", "client", "request"]
edition = "2018"

#[dependencies.native-tls]
#version = "^0.2"
#optional = true

[dependencies]
# sgx dependencies
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true, features = ["net", "untrusted_time"] }

# sgx enabled external libraries
unicase_sgx = { package = "unicase", git = "https://github.com/mesalock-linux/unicase-sgx", optional = true}
rustls_sgx  = { package = "rustls", git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", optional = true }
webpki_sgx  = { package = "webpki", git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx", optional = true }
webpki-roots_sgx = { package = "webpki-roots", git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx", optional = true }

# std compatible external libraries (make sure these versions match with the sgx-enabled ones above)
log = { version = "0.4", default-features = false }
unicase = { version = "2.6", optional = true }
rustls = { version = "0.19", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.21", optional = true }


[features]
default = ["rust-tls", "std"]
rust-tls = []
sgx = [
    "sgx_tstd",
    "unicase_sgx",
    "rustls_sgx",
    "webpki_sgx",
    "webpki-roots_sgx"
]
std = [
    "log/std",
    "unicase",
    "rustls",
    "webpki",
    "webpki-roots",
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { version = "1.1.4", git = "https://github.com/haerdib/incubator-teaclave-sgx-sdk", branch = "master"}
